# PlasmaZones

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  lefthook.yml
.copr/: Makefile
.github/workflows/: ci.yml  release.yml  update-flake-lock.yml
data/algorithms/: bsp.js  cascade.js  centered-master.js  cluster.js  columns.js  corner-master.js  deck.js  dwindle-memory.js  dwindle.js  floating-center.js  focus-sidebar.js  golden-ratio.js  horizontal-deck.js  master-stack.js  paper.js  quadrant-priority.js  spread.js  stair.js  tatami.js  three-column.js  wide.js  zen.js
data/layouts/: bsp.json
data/shaders/: common.glsl
dbus/: org.plasmazones.Autotile.xml  org.plasmazones.CompositorBridge.xml  org.plasmazones.Control.xml  org.plasmazones.Screen.xml  org.plasmazones.WindowTracking.xml
docs/: dbus-api-spec.md  kde-dependency-migration.md  multi-compositor-implementation-plan.md  multi-compositor-support.md  unify-snap-autotile-deferred.md
docs/refactoring/: overflow-manager-extraction.md  overflow-manager-implementation-plan.md
kcm/: CMakeLists.txt  kcm_plasmazones.cpp  kcm_plasmazones.h  settings-windowmanagement-plasmazones.desktop
kcm/about/: CMakeLists.txt  kcm_plasmazones_about.json  kcmabout.cpp  kcmabout.h
kcm/assignments/: CMakeLists.txt  kcmassignments.cpp  kcmassignments.h
kcm/autotiling/: CMakeLists.txt  kcmautotiling.cpp  kcmautotiling.h
kcm/autotiling/ui/: main.qml
kcm/common/: CMakeLists.txt  assignmentmanager.cpp  assignmentmanager.h  assignmentmanager_saveload.cpp  daemoncontroller.cpp  daemoncontroller.h  dbusutils.h  layoutmanager.cpp  layoutmanager.h  screenprovider.h
kcm/editor/: CMakeLists.txt  kcmeditor.cpp
kcm/exclusions/: CMakeLists.txt  kcmexclusions.cpp  kcmexclusions.h
kcm/general/: CMakeLists.txt  kcmgeneral.cpp  kcmgeneral.h
kcm/general/ui/: main.qml
kcm/layouts/: CMakeLists.txt  kcm_plasmazones_layouts.json  kcmlayouts.cpp  kcmlayouts.h
kcm/snapping/: CMakeLists.txt  kcmsnapping.cpp  kcmsnapping.h  kcmsnapping_zoneselector.cpp
kcm/snapping/ui/: AppearanceCard.qml  main.qml
kcm/ui/: EasingPreview.qml  ModifierCheckBoxes.qml  MonitorSelectorSection.qml  PerScreenOverrideHelper.qml  main.qml  qmldir
kwin-effect/: CMakeLists.txt  autotilehandler.cpp  autotilehandler.h  metadata.json  navigationhandler.cpp  navigationhandler.h  plasmazoneseffect.cpp  plasmazoneseffect.h  screenchangehandler.cpp  snapassisthandler.cpp  snapassisthandler.h  windowanimator.cpp  windowanimator.h
kwin-effect/autotilehandler/: signals.cpp  tiling.cpp
packaging/arch/: PKGBUILD  PKGBUILD.git
packaging/debian/: control
packaging/nix/: package.nix
packaging/rpm/: plasmazones.spec
po/: kcm_plasmazones.pot  plasmazones-editor.pot  plasmazonesd.pot
po/de/: kcm_plasmazones.po  plasmazones-editor.po  plasmazonesd.po
src/: CMakeLists.txt
src/autotile/: AlgorithmRegistry.cpp  AlgorithmRegistry.h  AutotileConfig.cpp  AutotileConfig.h  AutotileEngine.cpp  AutotileEngine.h  NavigationController.cpp  NavigationController.h  OverflowManager.cpp  OverflowManager.h  PerScreenConfigResolver.cpp  PerScreenConfigResolver.h  SettingsBridge.cpp  SettingsBridge.h  SplitTree.cpp  SplitTree.h  SplitTreeRebuild.cpp  SplitTreeSerializer.cpp  SplitTreeSerializer.h  TilingAlgorithm.cpp  TilingAlgorithm.h  TilingState.cpp  TilingState.h  TilingStateSerialization.cpp
src/config/: colorimporter.cpp  configbackend_json.cpp  configbackend_json.h  configbackend_qsettings.cpp  configbackend_qsettings.h  configdefaults.cpp  configdefaults.h  configkeys.h  configmigration.cpp  iconfigbackend.h  plasmazones.kcfg  settings.cpp  settings.h  settings_loadsave.cpp  settings_perscreen.cpp  settings_setters.cpp
src/core/: assignmententry.h  constants.h  enums.h  icompositorbridge.h  interfaces.h  iwindowengine.h  layersurface.cpp  layersurface.h  layout.cpp  layout.h  layoutmanager.cpp  layoutmanager.h  layoututils.cpp  layoututils.h  screenmanager.cpp  settings_interfaces.h  shaderregistry.cpp  shaderregistry.h  utils.cpp  utils.h  windowtrackingservice.cpp  windowtrackingservice.h  zonedetector.cpp  zoneselectorlayout.h
src/daemon/: daemon.cpp  daemon.h  daemon_autotile.cpp  daemon_helpers.h  daemon_macros.h  daemon_navigation.cpp  daemon_osd.cpp  daemon_signals.cpp  daemon_start.cpp  main.cpp  modetracker.cpp  overlayservice.cpp  overlayservice.h  overlayservice_internal.h  overlayservice_osd.cpp  overlayservice_overlay.cpp  overlayservice_overlay_data.cpp  overlayservice_selector.cpp  overlayservice_selector_update.cpp  overlayservice_settings.cpp  overlayservice_shader.cpp  overlayservice_snapassist.cpp  plasmazones.service  shortcutmanager.cpp  shortcutmanager.h  shortcutmanager_handlers.cpp  unifiedlayoutcontroller.cpp  vulkan_metatype.h  vulkan_support.h  zoneselectorcontroller.cpp
src/dbus/: autotileadaptor.cpp  autotileadaptor.h  autotileadaptor_config.cpp  compositorbridgeadaptor.cpp  controladaptor.cpp  controladaptor.h  layoutadaptor.cpp  layoutadaptor.h  layoutadaptor_assignment.cpp  layoutadaptor_editor.cpp  screenadaptor.cpp  screenadaptor.h  settingsadaptor.cpp  settingsadaptor.h  snapadaptor.cpp  windowdragadaptor.cpp  windowdragadaptor.h  windowdragadaptor_drag.cpp  windowdragadaptor_drop.cpp  windowtrackingadaptor.cpp  windowtrackingadaptor.h  windowtrackingadaptor_float.cpp  windowtrackingadaptor_internal.h  windowtrackingadaptor_navigation.cpp  windowtrackingadaptor_persistence.cpp  windowtrackingadaptor_saveload.cpp  windowtrackingadaptor_snaprestore.cpp  windowtrackingadaptor_targets.cpp  zonedetectionadaptor.cpp
src/editor/: EditorController.h  EditorController_clipboard.cpp  EditorController_gaps.cpp  EditorController_layout.cpp  EditorController_multiselect.cpp  EditorController_zones.cpp  (+6 more)
(+304 files in other folders)
